testsuite/tests/safeHaskell/check/Check09.stderr

Check09.hs:4:1: error:
    Prelude: Can't be safely imported!
    The package (base-4.13.0.0) the module resides in isn't trusted.

Check09.hs:5:1: error:
    Data.ByteString.Char8: Can't be safely imported!
    The package (bytestring-0.10.9.0) the module resides in isn't trusted.
